[package]
name = "pubsub_rs"
version = "0.1.0"
edition = "2021"
author = "zqiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
chrono = "0.4.31"
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"